# data-engineering

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  fix_init.py  fix_tch004.py
abandoned-cart-recovery-pipeline/: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
abandoned-cart-recovery-pipeline/tests/: _fixtures.py  test_attribute.py  test_campaign.py  test_detect.py  test_io.py  test_property.py  test_schema.py  test_sessionize.py  test_simulator_cli.py
adaptive-microbatch-optimizer/: pyproject.toml
adaptive-microbatch-optimizer/tests/: test_backpressure.py  test_cli.py  test_io.py  test_pid_controller.py  test_processor.py  test_properties.py  test_window_manager.py
air-quality-iot-pipeline/: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
air-quality-iot-pipeline/tests/: _fixtures.py  test_aggregate.py  test_alerts.py  test_io.py  test_property.py  test_qcvn.py  test_schema.py  test_simulator_cli.py
anti-money-laundering-graph/: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
anti-money-laundering-graph/tests/: _fixtures.py  test_cli.py  test_graph.py  test_io.py  test_patterns_fan_in.py  test_patterns_fan_out.py  test_patterns_layering.py  test_patterns_round_trip.py  test_patterns_structured.py  test_property.py  test_schema.py  test_scoring.py  test_simulator.py
backfill-orchestrator/: README.md  pyproject.toml
backfill-orchestrator/tests/: test_cli.py  test_orchestrator.py  test_property.py  test_schema.py
bft-stream/: pyproject.toml
bft-stream/tests/: test_cli.py  test_cluster.py  test_io.py  test_pbft.py  test_properties.py
bloom-filter/: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
bloom-filter/tests/: test_counting.py  test_filter.py  test_hash.py  test_io.py  test_property.py  test_scalable.py  test_schema.py  test_simulator_cli.py  test_sizing.py
circuit-breaker-toolkit/: README.md  pyproject.toml
circuit-breaker-toolkit/tests/: test_breaker.py  test_cli.py  test_io.py  test_property.py
column-encryption-pipeline/: pyproject.toml
column-encryption-pipeline/src/: config.py
column-encryption-pipeline/tests/: conftest.py  test_colenc.py  test_encryption.py  test_ingest.py  test_rotation.py  test_rtbf.py
column-statistics-collector/: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
column-statistics-collector/tests/: test_categorical.py  test_drift.py  test_histogram.py  test_io.py  test_numeric.py  test_profile.py  test_property.py  test_schema.py  test_simulator_cli.py
count-min-sketch/: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
count-min-sketch/tests/: test_cli.py  test_hash.py  test_heavy.py  test_io.py  test_property.py  test_schema.py  test_simulator_cli.py  test_sketch.py
crdt-data-quality/: pyproject.toml
crdt-data-quality/src/: cluster.py  metrics.py  worker.py
crdt-data-quality/tests/: test_pn_counter.py
credit-scoring-pipeline-vn/: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
credit-scoring-pipeline-vn/tests/: _fixtures.py  test_cic_groups.py  test_cli.py  test_features.py  test_io.py  test_property.py  test_schema.py  test_scoring.py  test_simulator.py
csv-schema-inference-toolkit/: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
csv-schema-inference-toolkit/tests/: test_emit.py  test_infer.py  test_io.py  test_parsers.py  test_property.py  test_reader.py  test_schema.py  test_simulator_cli.py
data-catalog-lineage/: pyproject.toml
data-catalog-lineage/tests/: test_catalog.py  test_cli.py  test_discovery.py  test_io.py  test_lineage.py  test_pii.py  test_pii_detector.py  test_properties.py
data_quality_monitor/: pyproject.toml  requirements.txt
data_quality_monitor/src/: config.py
data_quality_monitor/tests/: test_api.py  test_blocking.py  test_dqmonitor.py  test_metrics.py  test_pipeline.py  test_validators.py
dedup-with-bloom/: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dedup-with-bloom/tests/: test_bloom.py  test_dedup.py  test_io.py  test_property.py  test_schema.py  test_simulator_cli.py
differential-privacy-budget-manager/: pyproject.toml
differential-privacy-budget-manager/tests/: test_cli.py  test_composition.py  test_gateway.py  test_io.py  test_mechanisms.py  test_properties.py
distributed-query-planner/: pyproject.toml
distributed-query-planner/tests/: test_optimizer.py  test_predicate.py
dwh-data-quality-toolkit/: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
dwh-data-quality-toolkit/tests/: test_checks_generic.py  test_checks_vn.py  test_io.py  test_property.py  test_runner.py  test_schema.py  test_simulator_cli.py
ekyc-document-pipeline/: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
ekyc-document-pipeline/tests/: _fixtures.py  test_bca.py  test_cccd.py  test_cli.py  test_crypto.py  test_encryption.py  test_pipeline.py  test_property.py  test_provinces.py  test_schema.py  test_simulator.py  test_validate.py
exactly-once-pipeline/: pyproject.toml
exactly-once-pipeline/src/: config.py  db.py  models.py  outbox_poller.py  payment_service.py
exactly-once-pipeline/tests/: conftest.py  test_exactly_once.py  test_exactlyonce.py  test_recovery.py
flexible-paxos/: pyproject.toml
flexible-paxos/tests_py/: test_fpaxos.py
hyperloglog-cardinality/: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
hyperloglog-cardinality/tests/: test_hash.py  test_io.py  test_property.py  (+3 more)
intelligent-compaction-engine/: Dockerfile  pyproject.toml
ivm-engine/: pyproject.toml
kll-sketch/: README.md  pyproject.toml
lsm-merge-iterator/: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
lsm-remote-compaction/: pyproject.toml
lyapunov-retraining-controller/: CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
(+2437 files in other folders)
