[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abandoned-cart-recovery-pipeline"
version = "0.1.0"
description = "Funnel sessionization + abandoned-cart detection + recovery-campaign scheduling + conversion attribution for VN marketplaces (Shopee / Lazada / Tiki / TikTok Shop)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sophie-nguyenthuthuy" }]
keywords = ["abandoned-cart", "sessionization", "funnel", "attribution", "vietnam", "ecommerce"]
classifiers = ["Development Status :: 4 - Beta"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "hypothesis>=6.100", "mypy>=1.10", "ruff>=0.5"]

[project.scripts]
cartrec = "cartrec.cli:main"

[project.urls]
Homepage = "https://github.com/sophie-nguyenthuthuy/data-engineering/tree/main/abandoned-cart-recovery-pipeline"

[tool.hatch.build.targets.wheel]
packages = ["src/cartrec"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF", "TCH"]
ignore = ["E501", "B008", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM", "TCH"]
"src/cartrec/__init__.py" = ["TCH004"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = ["slow: marks tests as slow", "property: hypothesis property tests"]
