[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "air-quality-iot-pipeline"
version = "0.1.0"
description = "VN air-quality monitoring pipeline — PM2.5 / PM10 / NO2 / SO2 / O3 / CO sensor stream → QCVN-05 AQI per QĐ 1459/QĐ-TCMT + health alerts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sophie-nguyenthuthuy" }]
keywords = ["air-quality", "iot", "vietnam", "aqi", "pm25", "qcvn", "environment"]
classifiers = ["Development Status :: 4 - Beta"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "hypothesis>=6.100", "mypy>=1.10", "ruff>=0.5"]

[project.scripts]
aqipipe = "aqipipe.cli:main"

[project.urls]
Homepage = "https://github.com/sophie-nguyenthuthuy/data-engineering/tree/main/air-quality-iot-pipeline"

[tool.hatch.build.targets.wheel]
packages = ["src/aqipipe"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF", "TCH"]
ignore = ["E501", "B008", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM", "TCH"]
# Lazy-loading __init__.py: imports guarded by TYPE_CHECKING are
# rebound at runtime via __getattr__ + _LAZY string lookups; TCH004
# misreads the pattern.
"src/aqipipe/__init__.py" = ["TCH004"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = ["slow: marks tests as slow", "property: hypothesis property tests"]
