[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backfill-orchestrator"
version = "0.1.0"
description = "Time-partition backfill orchestrator: DAG-aware, concurrency-limited, checkpoint-resumable"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.scripts]
backfill = "backfill.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/backfill"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF", "TCH"]
ignore = ["RUF002", "RUF003"]
