[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circuit-breaker-toolkit"
version = "0.1.0"
description = "Circuit breaker resilience pattern: CLOSED/OPEN/HALF_OPEN state machine for failing dependencies"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.scripts]
circuitbreaker = "circuitbreaker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/circuitbreaker"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF", "TCH"]
ignore = ["RUF002", "RUF003"]
