[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "column-encryption-pipeline"
version = "0.1.0"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.scripts]
colenc = "colenc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/colenc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "TCH", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101", "B017", "F841"]

[tool.mypy]
strict = true
python_version = "3.10"
mypy_path = "src"
explicit_package_bases = true
no_site_packages = true

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*", "tqdm.*", "cryptography.*"]
ignore_missing_imports = true
