[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-catalog-lineage"
version = "0.1.0"
description = "Data catalog with PII detection and column-level lineage tracking"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.scripts]
datacatalog = "datacatalog.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/datacatalog"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "TCH", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
strict = true
python_version = "3.10"
