[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "differential-privacy-budget-manager"
version = "0.1.0"
description = "Differential-privacy budget manager with Laplace/Gaussian mechanisms and per-analyst ε accounting"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.scripts]
dpbudget = "dpbudget.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dpbudget"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "TCH", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
strict = true
python_version = "3.10"
