[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-query-planner"
version = "0.1.0"
description = "Federated query optimizer with predicate pushdown across MongoDB, Parquet, and PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=14.0",
    "pymongo>=4.6",
    "psycopg2-binary>=2.9",
    "sqlglot>=20.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov", "black", "ruff", "mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["pyarrow.*", "pymongo.*", "psycopg2.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
where = ["src"]
