[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flexible-paxos"
version = "0.1.0"
description = "Flexible Paxos consensus with dynamic quorum reconfiguration"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.scripts]
fpaxos = "fpaxos.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fpaxos"]

[tool.pytest.ini_options]
testpaths = ["tests_py"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "TCH", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
strict = true
python_version = "3.10"
