[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperloglog-cardinality"
version = "0.1.0"
description = "HyperLogLog++ sketch for distinct-count estimation at streaming scale — configurable precision, HLL++ bias correction, set merge via element-wise max."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sophie-nguyenthuthuy" }]
keywords = ["hyperloglog", "hll", "cardinality", "sketch", "distinct-count", "streaming"]
classifiers = ["Development Status :: 4 - Beta"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "hypothesis>=6.100", "mypy>=1.10", "ruff>=0.5"]

[project.scripts]
hllpp = "hllpp.cli:main"

[project.urls]
Homepage = "https://github.com/sophie-nguyenthuthuy/data-engineering/tree/main/hyperloglog-cardinality"

[tool.hatch.build.targets.wheel]
packages = ["src/hllpp"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF", "TCH"]
ignore = ["E501", "B008", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM", "TCH"]
"src/hllpp/__init__.py" = ["TCH004"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = ["slow: marks tests as slow", "property: hypothesis property tests"]
