[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ivm-engine"
version = "0.1.0"
description = "Incremental View Maintenance engine — differential dataflow in Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ivm = "ivm.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ivm"]

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "TCH", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/ivm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
