[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lsm-merge-iterator"
version = "0.1.0"
description = "k-way merge iterator for sorted runs — LSM-tree compaction primitive with last-write-wins and tombstone semantics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sophie-nguyenthuthuy" }]
keywords = ["lsm", "merge", "compaction", "k-way", "sorted", "iterator"]
classifiers = ["Development Status :: 4 - Beta"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "hypothesis>=6.100", "mypy>=1.10", "ruff>=0.5"]

[project.scripts]
lsmmerge = "lsmmerge.cli:main"

[project.urls]
Homepage = "https://github.com/sophie-nguyenthuthuy/data-engineering/tree/main/lsm-merge-iterator"

[tool.hatch.build.targets.wheel]
packages = ["src/lsmmerge"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF", "TCH"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM", "TCH"]
"src/lsmmerge/__init__.py" = ["TCH004"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = ["slow: marks tests as slow", "property: hypothesis property tests"]
